Fix lecturer and back button overlap

--- a/fe/fhtml/main.css
+++ b/fe/fhtml/main.css
@@ -149,6 +149,7 @@ h4 {
 	font-weight: bold;
 	font-size: 2.5em;
 	margin-bottom: 10px;
+	padding: 0 100px;
 }
 
 #ov_title {
@@ -593,6 +594,7 @@ nav a {
 
 	#ov_lecturer {
 		font-size: 1.7em;
+		padding: unset;
 	}
 
 	#ov_title {
